--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <title>Churrascometro</title>
+    <link rel="shortcut icon" href="./icon.svg">
 </head>
 <body>
 
