--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <title>Churrascometro</title>
-    <link rel="shortcut icon" href="./icon.svg">
+    <link rel="shortcut icon" href="./icon.svg"
 </head>
 <body>
 
@@ -14,7 +14,7 @@
         <input id="adultos" type="number" name="adultos" placeholder="Adultos">
         <input id="criancas" type="number" name="criancas" placeholder="Crianças">
         <input id="duracao" type="number" name="duracao" placeholder="Duração (h)">
-        <button>Calcular</button>
+        <button onclick="calcular()">Calcular</button>
 
         <div id="resultado"></div>
     </div>
